--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "pug": "2.0.0-beta11",
+    "pug": "^3.0.2",
     "sequelize": "^6.21.4",
     "socket.io": "^4.5.1"
   }
